# todo_app

./: Dockerfile  README.md  docker-compose.yml  pyproject.toml
app/: main.py
app/handlers/: done.py  todo.py
app/migrations/versions/: f53844e796b6_create_task_table.py
app/models/: task.py
docker/app/: Dockerfile
front/: pubspec.yaml
front/lib/: banana_counter.dart  main.dart
front/lib/entity/todo/: todo_item_request.dart  todo_item_request.freezed.dart  todo_item_request.g.dart
front/lib/entity/user/: user.dart  user.freezed.dart  user.g.dart
front/lib/pages/: todo_create.dart  todo_list.dart  todo_main.dart  top.dart
front/lib/repository/: todo_request.dart  user_request.dart
front/lib/utility/: alert_dialog.dart  toast.dart
server/: alembic.ini  main.py
server/handlers/: task.py
server/libraries/repositories/: task_repository.py
server/migrations/: alembic.ini  env.py
server/migrations/versions/: c5cbe8e1021d_create_tables.py  d57415f512f1_create_tables.py  f4685475aa1f_create_tables.py
server/models/: task.py
server/settings/: database.py
