[tool.poetry]
name = "todo-app"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.103.1"
uvicorn = {extras = ["standard"], version = "^0.23.2"}
sqlalchemy = "^2.0.20"
aiomysql = "^0.2.0"
alembic = "^1.12.0"
cryptography = "^41.0.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
